<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:fillViewport="false">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="36dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical">

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namehint"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"
            android:hint="@string/lastnamehint"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"
            android:hint="@string/dateofbirth"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"
            android:hint="@string/mailhint"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"
            android:hint="@string/numtelhint"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"
            android:hint="@string/usernamehint"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"
            android:hint="@string/passwordhint"
            android:inputType="textPassword"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"
            android:hint="@string/confirmhint"
            android:inputType="textPassword"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <Button
                android:id="@+id/okBtn"
                android:text="@string/okBtn"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_marginRight="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextIcon"
                android:onClick="okBtnClicked"
                />

            <Button
                android:id="@+id/cancelBtn"
                android:text="@string/cancelBtn"
                android:textAlignment="center"
                android:textSize="16sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextIcon"
                android:onClick="cancelBtnClicked"
                />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
