<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:fillViewport="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="36dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/namelabel"
                android:textSize="16dip"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dip"

                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:paddingRight="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/lastnamelabel"
                android:textSize="16dip"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dip"

                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:paddingRight="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/usernamelabel"
                android:textSize="16dip"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dip"

                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:paddingRight="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/passwordlabel"
                android:textSize="16dip"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dip"

                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:paddingRight="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/dateofbirthlabel"
                android:textSize="16dip"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dip"

                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:paddingRight="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/numtellabel"
                android:textSize="16dip"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dip"

                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:paddingRight="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/maillabel"
                android:textSize="16dip"
                android:layout_marginBottom="12dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16dip"

                android:textAlignment="textEnd"
                android:layout_marginBottom="12dp"
                android:paddingRight="0dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:numStars="5"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:translationX="-63dp"
                android:progressTint="@color/colorAccent"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16dip"
            android:layout_marginBottom="12dp"/>
    </LinearLayout>
</ScrollView>